--- a/extras/OS/pages/FRL/forgot-password-v2.html
+++ b/extras/OS/pages/FRL/forgot-password-v2.html
@@ -25,9 +25,19 @@
   <!-- Theme style -->
   <link rel="stylesheet" href="../../dist/css/adminlte.min.css" />
 </head>
+<style>
+  body {
+    background: url(../../../../images/logo/log2.jpg) no-repeat;
+    background-position: center;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: absolute;
+    width: 100%;
+  }
+</style>
 
-<body class="hold-transition login-page"
-  style="background: url(../../../../images/logo/log2.jpg) no-repeat;position: absolute;background-position: center;width: 100%;">
+<body class="hold-transition login-page">
   <div
     style="background-color: rgba(0,0,0,0.65); position: absolute;width: 100%;height: 100%;align-items: center;justify-content: center;display: flex;overflow-y: scroll;">
     <div class="login-box" style="display: inline-flex;">
